// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact assembled FoundationCatalogs lesson/position rows for module 2 1`] = `
[
  {
    "diversityConstraints": {
      "exerciseCountRange": [
        4,
        4,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 1,
      "minRoles": 3,
      "minTransferExercises": 2,
      "minUniqueTargets": 4,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "familyIds": [
      "a1-family-topic-copular",
    ],
    "id": "introductions-1",
    "level": "a1",
    "modelVariantIds": [
      "introductions-1-m1",
      "introductions-1-m2",
      "introductions-1-m3",
      "introductions-1-m4",
      "introductions-1-m5",
      "introductions-1-m6",
      "introductions-1-m7",
      "introductions-1-m8",
    ],
    "moduleId": "introductions",
    "practice": {
      "lessonId": "introductions-1",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-1-m1",
          "introductions-1-m2",
          "introductions-1-m3",
          "introductions-1-m4",
          "introductions-1-m5",
          "introductions-1-m6",
          "introductions-1-m7",
          "introductions-1-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-1-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-1-t1",
          "introductions-1-t2",
          "introductions-1-t3",
          "introductions-1-t4",
          "introductions-1-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-1-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
    },
    "primaryCanDoId": "a1-can-do-identity",
    "supportingCanDoIds": [
      "a1-can-do-origins",
    ],
  },
  {
    "diversityConstraints": {
      "exerciseCountRange": [
        4,
        4,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 1,
      "minRoles": 3,
      "minTransferExercises": 2,
      "minUniqueTargets": 4,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "familyIds": [
      "a1-family-nominative-action",
    ],
    "id": "introductions-2",
    "level": "a1",
    "modelVariantIds": [
      "introductions-2-m1",
      "introductions-2-m2",
      "introductions-2-m3",
      "introductions-2-m4",
      "introductions-2-m5",
      "introductions-2-m6",
      "introductions-2-m7",
      "introductions-2-m8",
    ],
    "moduleId": "introductions",
    "practice": {
      "lessonId": "introductions-2",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-2-m1",
          "introductions-2-m2",
          "introductions-2-m3",
          "introductions-2-m4",
          "introductions-2-m5",
          "introductions-2-m6",
          "introductions-2-m7",
          "introductions-2-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-2-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-2-t1",
          "introductions-2-t2",
          "introductions-2-t3",
          "introductions-2-t4",
          "introductions-2-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-2-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
    },
    "primaryCanDoId": "a1-can-do-identity",
    "supportingCanDoIds": [
      "a1-can-do-actions",
    ],
  },
  {
    "diversityConstraints": {
      "exerciseCountRange": [
        4,
        4,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 1,
      "minRoles": 3,
      "minTransferExercises": 2,
      "minUniqueTargets": 4,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "familyIds": [
      "a1-family-topic-copular",
      "a1-family-nominative-action",
    ],
    "id": "introductions-3",
    "level": "a1",
    "modelVariantIds": [
      "introductions-3-m1",
      "introductions-3-m2",
      "introductions-3-m3",
      "introductions-3-m4",
      "introductions-3-m5",
      "introductions-3-m6",
      "introductions-3-m7",
      "introductions-3-m8",
    ],
    "moduleId": "introductions",
    "practice": {
      "lessonId": "introductions-3",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-3-m1",
          "introductions-3-m2",
          "introductions-3-m3",
          "introductions-3-m4",
          "introductions-3-m5",
          "introductions-3-m6",
          "introductions-3-m7",
          "introductions-3-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-3-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-3-t1",
          "introductions-3-t2",
          "introductions-3-t3",
          "introductions-3-t4",
          "introductions-3-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-3-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
    },
    "primaryCanDoId": "a1-can-do-origins",
    "supportingCanDoIds": [
      "a1-can-do-identity",
    ],
  },
  {
    "diversityConstraints": {
      "exerciseCountRange": [
        4,
        4,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 1,
      "minRoles": 3,
      "minTransferExercises": 2,
      "minUniqueTargets": 4,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "familyIds": [
      "a1-family-topic-copular",
      "a1-family-nominative-action",
    ],
    "id": "introductions-4",
    "level": "a1",
    "modelVariantIds": [
      "introductions-4-m1",
      "introductions-4-m2",
      "introductions-4-m3",
      "introductions-4-m4",
      "introductions-4-m5",
      "introductions-4-m6",
      "introductions-4-m7",
      "introductions-4-m8",
    ],
    "moduleId": "introductions",
    "practice": {
      "lessonId": "introductions-4",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-4-m1",
          "introductions-4-m2",
          "introductions-4-m3",
          "introductions-4-m4",
          "introductions-4-m5",
          "introductions-4-m6",
          "introductions-4-m7",
          "introductions-4-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-4-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-4-t1",
          "introductions-4-t2",
          "introductions-4-t3",
          "introductions-4-t4",
          "introductions-4-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-4-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
    },
    "primaryCanDoId": "a1-can-do-identity",
    "supportingCanDoIds": [
      "a1-can-do-origins",
      "a1-can-do-actions",
    ],
  },
]
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact assembled FoundationCatalogs lesson/position rows for module 2 2`] = `
[
  {
    "lessonId": "introductions-1",
    "level": "a1",
    "moduleId": "introductions",
    "position": 5,
  },
  {
    "lessonId": "introductions-2",
    "level": "a1",
    "moduleId": "introductions",
    "position": 6,
  },
  {
    "lessonId": "introductions-3",
    "level": "a1",
    "moduleId": "introductions",
    "position": 7,
  },
  {
    "lessonId": "introductions-4",
    "level": "a1",
    "moduleId": "introductions",
    "position": 8,
  },
]
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact assembled FoundationCatalogs lesson/position rows for module 2 3`] = `
[
  {
    "id": "a1-verb-use-a1-sense-be",
    "introductionExercise": {
      "exerciseKind": "tile-ordering",
      "lessonId": "introductions-1",
      "roundId": "introductions-1-round-1",
      "targetVariantId": "introductions-1-m1",
    },
    "introductionLessonId": "introductions-1",
    "introductionVariantIds": [
      "introductions-1-m1",
      "introductions-1-m4",
    ],
    "laterUses": [],
    "learningUse": "productive",
    "senseId": "a1-sense-be",
  },
  {
    "id": "a1-verb-use-a1-sense-understand",
    "introductionExercise": {
      "exerciseKind": "tile-ordering",
      "lessonId": "introductions-2",
      "roundId": "introductions-2-round-1",
      "targetVariantId": "introductions-2-m4",
    },
    "introductionLessonId": "introductions-2",
    "introductionVariantIds": [
      "introductions-2-m4",
      "introductions-2-m5",
    ],
    "laterUses": [],
    "learningUse": "productive",
    "senseId": "a1-sense-understand",
  },
]
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact merged EN/IT translation+scenario copy for module 2 1`] = `
{
  "en": {
    "introductions-1-m1-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-1-m1-translation": "Yuki is a student.",
    "introductions-1-m2-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-1-m2-translation": "Ken is a teacher.",
    "introductions-1-m3-scenario": "You are in the language class, talking about your studies.",
    "introductions-1-m3-translation": "I am a student.",
    "introductions-1-m4-scenario": "You are in the language class, talking about your studies.",
    "introductions-1-m4-translation": "I am a teacher.",
    "introductions-1-m5-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-1-m5-translation": "The teacher is a doctor.",
    "introductions-1-m6-scenario": "You are chatting with a colleague at work.",
    "introductions-1-m6-translation": "I am a doctor.",
    "introductions-1-m7-scenario": "You are in the language class, talking about your studies.",
    "introductions-1-m7-translation": "Yuki is a doctor.",
    "introductions-1-m8-scenario": "You are in the language class, talking about your studies.",
    "introductions-1-m8-translation": "I am a student.",
    "introductions-1-t1-scenario": "You are in the language class, talking about your studies.",
    "introductions-1-t1-translation": "Ken is a student.",
    "introductions-1-t2-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-1-t2-translation": "I am a doctor.",
    "introductions-1-t3-scenario": "You are chatting with a colleague at work.",
    "introductions-1-t3-translation": "Yuki is a teacher.",
    "introductions-1-t4-scenario": "You are in the language class, talking about your studies.",
    "introductions-1-t4-translation": "Yuki is a student.",
    "introductions-1-t5-scenario": "You are chatting with a colleague at work.",
    "introductions-1-t5-translation": "I am a teacher.",
    "introductions-2-m1-scenario": "You are in the language class, talking about your studies.",
    "introductions-2-m1-translation": "Yuki understands Japanese.",
    "introductions-2-m2-scenario": "You are in the language class, talking about your studies.",
    "introductions-2-m2-translation": "Ken understands English.",
    "introductions-2-m3-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-2-m3-translation": "I understands Italian.",
    "introductions-2-m4-scenario": "You are in the language class, talking about your studies.",
    "introductions-2-m4-translation": "Ken understands Japanese.",
    "introductions-2-m5-scenario": "You are chatting with a colleague at work.",
    "introductions-2-m5-translation": "I understands English.",
    "introductions-2-m6-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-2-m6-translation": "I understands Italian.",
    "introductions-2-m7-scenario": "You are in the language class, talking about your studies.",
    "introductions-2-m7-translation": "Yuki understands English.",
    "introductions-2-m8-scenario": "You are chatting with a colleague at work.",
    "introductions-2-m8-translation": "Ken understands Italian.",
    "introductions-2-t1-scenario": "You are chatting with a colleague at work.",
    "introductions-2-t1-translation": "Yuki understands Italian.",
    "introductions-2-t2-scenario": "You are chatting with a colleague at work.",
    "introductions-2-t2-translation": "Ken understands Japanese.",
    "introductions-2-t3-scenario": "You are in the language class, talking about your studies.",
    "introductions-2-t3-translation": "Yuki understands English.",
    "introductions-2-t4-scenario": "You are chatting with a colleague at work.",
    "introductions-2-t4-translation": "I understands Japanese.",
    "introductions-2-t5-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-2-t5-translation": "Ken understands English.",
    "introductions-3-m1-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-m1-translation": "Yuki is Japanese.",
    "introductions-3-m2-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-m2-translation": "Ken is Italian.",
    "introductions-3-m3-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-m3-translation": "Mina is American.",
    "introductions-3-m4-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-m4-translation": "I understands Japanese.",
    "introductions-3-m5-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-m5-translation": "Yuki understands English.",
    "introductions-3-m6-scenario": "You are in the language class, talking about your studies.",
    "introductions-3-m6-translation": "I understands Italian.",
    "introductions-3-m7-scenario": "You are in the language class, talking about your studies.",
    "introductions-3-m7-translation": "Ken understands Japanese.",
    "introductions-3-m8-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-m8-translation": "Yuki understands Italian.",
    "introductions-3-t1-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-t1-translation": "Mina is Japanese.",
    "introductions-3-t2-scenario": "You are chatting with a colleague at work.",
    "introductions-3-t2-translation": "Mina understands Japanese.",
    "introductions-3-t3-scenario": "You are chatting with a colleague at work.",
    "introductions-3-t3-translation": "Yuki understands English.",
    "introductions-3-t4-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-t4-translation": "Ken is American.",
    "introductions-3-t5-scenario": "You are chatting with a colleague at work.",
    "introductions-3-t5-translation": "I understands Italian.",
    "introductions-4-m1-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-4-m1-translation": "Yuki is a student.",
    "introductions-4-m2-scenario": "You are chatting with a colleague at work.",
    "introductions-4-m2-translation": "Ken is an engineer.",
    "introductions-4-m3-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-4-m3-translation": "Yuki is an office worker.",
    "introductions-4-m4-scenario": "You are chatting with a colleague at work.",
    "introductions-4-m4-translation": "That person is an engineer.",
    "introductions-4-m5-scenario": "You are in the language class, talking about your studies.",
    "introductions-4-m5-translation": "That person over there understands Japanese.",
    "introductions-4-m6-scenario": "You are in the language class, talking about your studies.",
    "introductions-4-m6-translation": "I understands English.",
    "introductions-4-m7-scenario": "You are in the language class, talking about your studies.",
    "introductions-4-m7-translation": "Ken understands Italian.",
    "introductions-4-m8-scenario": "You are chatting with a colleague at work.",
    "introductions-4-m8-translation": "I understands Japanese.",
    "introductions-4-t1-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-4-t1-translation": "Mina understands Japanese.",
    "introductions-4-t2-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-4-t2-translation": "Yuki understands English.",
    "introductions-4-t3-scenario": "You are chatting with a colleague at work.",
    "introductions-4-t3-translation": "Ken understands Italian.",
    "introductions-4-t4-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-4-t4-translation": "I understands Japanese.",
    "introductions-4-t5-scenario": "You are chatting with a colleague at work.",
    "introductions-4-t5-translation": "I understands English.",
  },
  "it": {
    "introductions-1-m1-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-1-m1-translation": "Yuki è una studentessa.",
    "introductions-1-m2-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-1-m2-translation": "Ken è un insegnante.",
    "introductions-1-m3-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-1-m3-translation": "Io sono uno studente.",
    "introductions-1-m4-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-1-m4-translation": "Io sono un insegnante.",
    "introductions-1-m5-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-1-m5-translation": "L'insegnante è un medico.",
    "introductions-1-m6-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-1-m6-translation": "Io sono un medico.",
    "introductions-1-m7-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-1-m7-translation": "Yuki è un medico.",
    "introductions-1-m8-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-1-m8-translation": "Io sono uno studente.",
    "introductions-1-t1-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-1-t1-translation": "Ken è uno studente.",
    "introductions-1-t2-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-1-t2-translation": "Io sono un medico.",
    "introductions-1-t3-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-1-t3-translation": "Yuki è un insegnante.",
    "introductions-1-t4-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-1-t4-translation": "Yuki è una studentessa.",
    "introductions-1-t5-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-1-t5-translation": "Io sono un insegnante.",
    "introductions-2-m1-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-2-m1-translation": "Yuki capisce il giapponese.",
    "introductions-2-m2-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-2-m2-translation": "Ken capisce l'inglese.",
    "introductions-2-m3-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-2-m3-translation": "Io capisce l'italiano.",
    "introductions-2-m4-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-2-m4-translation": "Ken capisce il giapponese.",
    "introductions-2-m5-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-2-m5-translation": "Io capisce l'inglese.",
    "introductions-2-m6-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-2-m6-translation": "Io capisce l'italiano.",
    "introductions-2-m7-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-2-m7-translation": "Yuki capisce l'inglese.",
    "introductions-2-m8-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-2-m8-translation": "Ken capisce l'italiano.",
    "introductions-2-t1-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-2-t1-translation": "Yuki capisce l'italiano.",
    "introductions-2-t2-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-2-t2-translation": "Ken capisce il giapponese.",
    "introductions-2-t3-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-2-t3-translation": "Yuki capisce l'inglese.",
    "introductions-2-t4-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-2-t4-translation": "Io capisce il giapponese.",
    "introductions-2-t5-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-2-t5-translation": "Ken capisce l'inglese.",
    "introductions-3-m1-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-m1-translation": "Yuki è giapponese.",
    "introductions-3-m2-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-m2-translation": "Ken è italiano.",
    "introductions-3-m3-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-m3-translation": "Mina è americana.",
    "introductions-3-m4-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-m4-translation": "Io capisce il giapponese.",
    "introductions-3-m5-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-m5-translation": "Yuki capisce l'inglese.",
    "introductions-3-m6-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-3-m6-translation": "Io capisce l'italiano.",
    "introductions-3-m7-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-3-m7-translation": "Ken capisce il giapponese.",
    "introductions-3-m8-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-m8-translation": "Yuki capisce l'italiano.",
    "introductions-3-t1-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-t1-translation": "Mina è giapponese.",
    "introductions-3-t2-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-3-t2-translation": "Mina capisce il giapponese.",
    "introductions-3-t3-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-3-t3-translation": "Yuki capisce l'inglese.",
    "introductions-3-t4-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-t4-translation": "Ken è americano.",
    "introductions-3-t5-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-3-t5-translation": "Io capisce l'italiano.",
    "introductions-4-m1-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-4-m1-translation": "Yuki è una studentessa.",
    "introductions-4-m2-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-4-m2-translation": "Ken è un ingegnere.",
    "introductions-4-m3-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-4-m3-translation": "Yuki è un'impiegata.",
    "introductions-4-m4-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-4-m4-translation": "Quella persona è un ingegnere.",
    "introductions-4-m5-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-4-m5-translation": "Quella persona là capisce il giapponese.",
    "introductions-4-m6-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-4-m6-translation": "Io capisce l'inglese.",
    "introductions-4-m7-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-4-m7-translation": "Ken capisce l'italiano.",
    "introductions-4-m8-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-4-m8-translation": "Io capisce il giapponese.",
    "introductions-4-t1-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-4-t1-translation": "Mina capisce il giapponese.",
    "introductions-4-t2-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-4-t2-translation": "Yuki capisce l'inglese.",
    "introductions-4-t3-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-4-t3-translation": "Ken capisce l'italiano.",
    "introductions-4-t4-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-4-t4-translation": "Io capisce il giapponese.",
    "introductions-4-t5-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-4-t5-translation": "Io capisce l'inglese.",
  },
}
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact module recipe (module02Recipe) 1`] = `
{
  "id": "introductions",
  "lessonIds": [
    "introductions-1",
    "introductions-2",
    "introductions-3",
    "introductions-4",
  ],
  "order": 2,
  "outcomeCopyId": "a1-module-outcome-introductions",
  "prerequisiteIds": [
    "sounds",
  ],
}
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact realized Japanese/rōmaji/fingerprint for every module-2 variant 1`] = `
[
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-1-m1",
    "jp": "ゆきはがくせいです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "yuki wa gakusei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-student,predicate=a1-value-be,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはがくせいです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-1-m2",
    "jp": "けんはせんせいです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "ken wa sensei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-teacher,predicate=a1-value-be,subject=a1-value-ken",
    "visibleTargetKey": "けんはせんせいです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-1-m3",
    "jp": "わたしはがくせいです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "watashi wa gakusei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-student,predicate=a1-value-be,subject=a1-value-watashi",
    "visibleTargetKey": "わたしはがくせいです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-1-m4",
    "jp": "せんせいです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "sensei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-teacher,predicate=a1-value-be,subject=a1-value-watashi",
    "visibleTargetKey": "せんせいです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-1-m5",
    "jp": "せんせいはいしゃです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "sensei wa isha desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-teacher|addressee=a1-role-teacher|subjectReferent=a1-referent-teacher|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-doctor,predicate=a1-value-be,subject=a1-value-teacher-subject",
    "visibleTargetKey": "せんせいはいしゃです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-1-m6",
    "jp": "わたしはいしゃです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "watashi wa isha desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-doctor,predicate=a1-value-be,subject=a1-value-watashi",
    "visibleTargetKey": "わたしはいしゃです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-1-m7",
    "jp": "ゆきはいしゃです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "yuki wa isha desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-doctor,predicate=a1-value-be,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはいしゃです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-1-m8",
    "jp": "がくせいです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "gakusei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-student,predicate=a1-value-be,subject=a1-value-watashi",
    "visibleTargetKey": "がくせいです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-1-t1",
    "jp": "けんはがくせいです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "ken wa gakusei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-student,predicate=a1-value-be,subject=a1-value-ken",
    "visibleTargetKey": "けんはがくせいです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-1-t2",
    "jp": "いしゃです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "isha desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-doctor,predicate=a1-value-be,subject=a1-value-watashi",
    "visibleTargetKey": "いしゃです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-1-t3",
    "jp": "ゆきはせんせいです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "yuki wa sensei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-teacher,predicate=a1-value-be,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはせんせいです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-1-t4",
    "jp": "ゆきはがくせいです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "yuki wa gakusei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-student,predicate=a1-value-be,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはがくせいです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-1-t5",
    "jp": "わたしはせんせいです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "watashi wa sensei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-teacher,predicate=a1-value-be,subject=a1-value-watashi",
    "visibleTargetKey": "わたしはせんせいです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-2-m1",
    "jp": "ゆきはにほんごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "yuki wa nihongo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-japanese,predicate=a1-value-understand,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはにほんごがわかります",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-2-m2",
    "jp": "けんはえいごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "ken wa eigo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-english,predicate=a1-value-understand,subject=a1-value-ken",
    "visibleTargetKey": "けんはえいごがわかります",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-2-m3",
    "jp": "わたしはイタリアごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "watashi wa itariago ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-italian,predicate=a1-value-understand,subject=a1-value-watashi",
    "visibleTargetKey": "わたしはイタリアごがわかります",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-2-m4",
    "jp": "けんはにほんごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "ken wa nihongo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-japanese,predicate=a1-value-understand,subject=a1-value-ken",
    "visibleTargetKey": "けんはにほんごがわかります",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-2-m5",
    "jp": "えいごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "eigo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-understand|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-english,predicate=a1-value-understand,subject=a1-value-watashi",
    "visibleTargetKey": "えいごがわかります",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-2-m6",
    "jp": "イタリアごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "itariago ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-understand|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-italian,predicate=a1-value-understand,subject=a1-value-watashi",
    "visibleTargetKey": "イタリアごがわかります",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-2-m7",
    "jp": "ゆきはえいごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "yuki wa eigo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-english,predicate=a1-value-understand,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはえいごがわかります",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-2-m8",
    "jp": "けんはイタリアごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "ken wa itariago ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-italian,predicate=a1-value-understand,subject=a1-value-ken",
    "visibleTargetKey": "けんはイタリアごがわかります",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-2-t1",
    "jp": "ゆきはイタリアごがわかります",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "yuki wa itariago ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-italian,predicate=a1-value-understand,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはイタリアごがわかります",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-2-t2",
    "jp": "けんはにほんごがわかります",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "ken wa nihongo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-japanese,predicate=a1-value-understand,subject=a1-value-ken",
    "visibleTargetKey": "けんはにほんごがわかります",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-2-t3",
    "jp": "えいごがわかります",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "eigo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=omitted|sense=a1-sense-understand|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-english,predicate=a1-value-understand,subject=a1-value-yuki",
    "visibleTargetKey": "えいごがわかります",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-2-t4",
    "jp": "にほんごがわかります",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "nihongo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-understand|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-japanese,predicate=a1-value-understand,subject=a1-value-watashi",
    "visibleTargetKey": "にほんごがわかります",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-2-t5",
    "jp": "けんはえいごがわかります",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "ken wa eigo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-english,predicate=a1-value-understand,subject=a1-value-ken",
    "visibleTargetKey": "けんはえいごがわかります",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-m1",
    "jp": "ゆきはにほんじんです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "yuki wa nihonjin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-japanese-person,predicate=a1-value-be,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはにほんじんです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-m2",
    "jp": "けんはイタリアじんです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "ken wa itariajin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-italian-person,predicate=a1-value-be,subject=a1-value-ken",
    "visibleTargetKey": "けんはイタリアじんです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-m3",
    "jp": "みなはアメリカじんです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "mina wa amerikajin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-american-person,predicate=a1-value-be,subject=a1-value-mina",
    "visibleTargetKey": "みなはアメリカじんです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-m4",
    "jp": "にほんごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "nihongo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-understand|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-japanese,predicate=a1-value-understand,subject=a1-value-watashi",
    "visibleTargetKey": "にほんごがわかります",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-m5",
    "jp": "ゆきはえいごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "yuki wa eigo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-english,predicate=a1-value-understand,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはえいごがわかります",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-3-m6",
    "jp": "イタリアごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "itariago ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-understand|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-italian,predicate=a1-value-understand,subject=a1-value-watashi",
    "visibleTargetKey": "イタリアごがわかります",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-3-m7",
    "jp": "けんはにほんごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "ken wa nihongo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-japanese,predicate=a1-value-understand,subject=a1-value-ken",
    "visibleTargetKey": "けんはにほんごがわかります",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-m8",
    "jp": "ゆきはイタリアごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "yuki wa itariago ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-italian,predicate=a1-value-understand,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはイタリアごがわかります",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-t1",
    "jp": "みなはにほんじんです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "mina wa nihonjin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-japanese-person,predicate=a1-value-be,subject=a1-value-mina",
    "visibleTargetKey": "みなはにほんじんです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-3-t2",
    "jp": "みなはにほんごがわかります",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "mina wa nihongo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-japanese,predicate=a1-value-understand,subject=a1-value-mina",
    "visibleTargetKey": "みなはにほんごがわかります",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-3-t3",
    "jp": "ゆきはえいごがわかります",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "yuki wa eigo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-english,predicate=a1-value-understand,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはえいごがわかります",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-t4",
    "jp": "けんはアメリカじんです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "ken wa amerikajin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-american-person,predicate=a1-value-be,subject=a1-value-ken",
    "visibleTargetKey": "けんはアメリカじんです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-3-t5",
    "jp": "イタリアごがわかります",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "itariago ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-understand|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-italian,predicate=a1-value-understand,subject=a1-value-watashi",
    "visibleTargetKey": "イタリアごがわかります",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-4-m1",
    "jp": "ゆきはがくせいです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "yuki wa gakusei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-student,predicate=a1-value-be,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはがくせいです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-4-m2",
    "jp": "けんはエンジニアです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "ken wa enjinia desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-engineer,predicate=a1-value-be,subject=a1-value-ken",
    "visibleTargetKey": "けんはエンジニアです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-4-m3",
    "jp": "ゆきはかいしゃいんです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "yuki wa kaishain desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-office-worker,predicate=a1-value-be,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはかいしゃいんです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-4-m4",
    "jp": "そのひとはエンジニアです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "sono hito wa enjinia desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-person|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-engineer,predicate=a1-value-be,subject=a1-value-sono-hito",
    "visibleTargetKey": "そのひとはエンジニアです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-4-m5",
    "jp": "あのひとはにほんごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "ano hito wa nihongo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-person|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-japanese,predicate=a1-value-understand,subject=a1-value-ano-hito",
    "visibleTargetKey": "あのひとはにほんごがわかります",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-4-m6",
    "jp": "えいごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "eigo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-understand|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-english,predicate=a1-value-understand,subject=a1-value-watashi",
    "visibleTargetKey": "えいごがわかります",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-4-m7",
    "jp": "けんはイタリアごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "ken wa itariago ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-italian,predicate=a1-value-understand,subject=a1-value-ken",
    "visibleTargetKey": "けんはイタリアごがわかります",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-4-m8",
    "jp": "にほんごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "nihongo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-understand|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-japanese,predicate=a1-value-understand,subject=a1-value-watashi",
    "visibleTargetKey": "にほんごがわかります",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-4-t1",
    "jp": "みなはにほんごがわかります",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "mina wa nihongo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-japanese,predicate=a1-value-understand,subject=a1-value-mina",
    "visibleTargetKey": "みなはにほんごがわかります",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-4-t2",
    "jp": "ゆきはえいごがわかります",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "yuki wa eigo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-english,predicate=a1-value-understand,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはえいごがわかります",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-4-t3",
    "jp": "けんはイタリアごがわかります",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "ken wa itariago ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-italian,predicate=a1-value-understand,subject=a1-value-ken",
    "visibleTargetKey": "けんはイタリアごがわかります",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-4-t4",
    "jp": "にほんごがわかります",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "nihongo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-understand|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-japanese,predicate=a1-value-understand,subject=a1-value-watashi",
    "visibleTargetKey": "にほんごがわかります",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-4-t5",
    "jp": "えいごがわかります",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "eigo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-understand|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-english,predicate=a1-value-understand,subject=a1-value-watashi",
    "visibleTargetKey": "えいごがわかります",
  },
]
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact recipe/practice/diversity fields for every module-2 lesson 1`] = `
[
  {
    "contract": "instructional",
    "diversityConstraints": {
      "exerciseCountRange": [
        4,
        4,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 1,
      "minRoles": 3,
      "minTransferExercises": 2,
      "minUniqueTargets": 4,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "guidedVariantIds": [
      "introductions-1-m1",
      "introductions-1-m2",
    ],
    "id": "introductions-1",
    "introducedConceptIds": [
      "a1-concept-topic-wa",
      "a1-concept-copula-desu",
    ],
    "introducedSenseIds": [
      "a1-sense-be",
    ],
    "modelVariantIds": [
      "introductions-1-m1",
      "introductions-1-m2",
      "introductions-1-m3",
      "introductions-1-m4",
      "introductions-1-m5",
      "introductions-1-m6",
      "introductions-1-m7",
      "introductions-1-m8",
    ],
    "moduleId": "introductions",
    "order": 1,
    "practice": {
      "lessonId": "introductions-1",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-1-m1",
          "introductions-1-m2",
          "introductions-1-m3",
          "introductions-1-m4",
          "introductions-1-m5",
          "introductions-1-m6",
          "introductions-1-m7",
          "introductions-1-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-1-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-1-t1",
          "introductions-1-t2",
          "introductions-1-t3",
          "introductions-1-t4",
          "introductions-1-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-1-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
    },
    "primaryCanDoId": "a1-can-do-identity",
    "spokenVariantId": "introductions-1-m1",
    "supportingCanDoIds": [
      "a1-can-do-origins",
    ],
  },
  {
    "contract": "instructional",
    "diversityConstraints": {
      "exerciseCountRange": [
        4,
        4,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 1,
      "minRoles": 3,
      "minTransferExercises": 2,
      "minUniqueTargets": 4,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "guidedVariantIds": [
      "introductions-2-m1",
      "introductions-2-m2",
    ],
    "id": "introductions-2",
    "introducedConceptIds": [
      "a1-concept-nominative-ga",
    ],
    "introducedSenseIds": [
      "a1-sense-understand",
    ],
    "modelVariantIds": [
      "introductions-2-m1",
      "introductions-2-m2",
      "introductions-2-m3",
      "introductions-2-m4",
      "introductions-2-m5",
      "introductions-2-m6",
      "introductions-2-m7",
      "introductions-2-m8",
    ],
    "moduleId": "introductions",
    "order": 2,
    "practice": {
      "lessonId": "introductions-2",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-2-m1",
          "introductions-2-m2",
          "introductions-2-m3",
          "introductions-2-m4",
          "introductions-2-m5",
          "introductions-2-m6",
          "introductions-2-m7",
          "introductions-2-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-2-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-2-t1",
          "introductions-2-t2",
          "introductions-2-t3",
          "introductions-2-t4",
          "introductions-2-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-2-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
    },
    "primaryCanDoId": "a1-can-do-identity",
    "spokenVariantId": "introductions-2-m1",
    "supportingCanDoIds": [
      "a1-can-do-actions",
    ],
  },
  {
    "contract": "instructional",
    "diversityConstraints": {
      "exerciseCountRange": [
        4,
        4,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 1,
      "minRoles": 3,
      "minTransferExercises": 2,
      "minUniqueTargets": 4,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "guidedVariantIds": [
      "introductions-3-m1",
      "introductions-3-m2",
    ],
    "id": "introductions-3",
    "introducedConceptIds": [
      "a1-concept-topic-wa",
      "a1-concept-copula-desu",
    ],
    "introducedSenseIds": [],
    "modelVariantIds": [
      "introductions-3-m1",
      "introductions-3-m2",
      "introductions-3-m3",
      "introductions-3-m4",
      "introductions-3-m5",
      "introductions-3-m6",
      "introductions-3-m7",
      "introductions-3-m8",
    ],
    "moduleId": "introductions",
    "order": 3,
    "practice": {
      "lessonId": "introductions-3",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-3-m1",
          "introductions-3-m2",
          "introductions-3-m3",
          "introductions-3-m4",
          "introductions-3-m5",
          "introductions-3-m6",
          "introductions-3-m7",
          "introductions-3-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-3-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-3-t1",
          "introductions-3-t2",
          "introductions-3-t3",
          "introductions-3-t4",
          "introductions-3-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-3-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
    },
    "primaryCanDoId": "a1-can-do-origins",
    "spokenVariantId": "introductions-3-m1",
    "supportingCanDoIds": [
      "a1-can-do-identity",
    ],
  },
  {
    "contract": "instructional",
    "diversityConstraints": {
      "exerciseCountRange": [
        4,
        4,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 1,
      "minRoles": 3,
      "minTransferExercises": 2,
      "minUniqueTargets": 4,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "guidedVariantIds": [
      "introductions-4-m1",
      "introductions-4-m2",
    ],
    "id": "introductions-4",
    "introducedConceptIds": [],
    "introducedSenseIds": [],
    "modelVariantIds": [
      "introductions-4-m1",
      "introductions-4-m2",
      "introductions-4-m3",
      "introductions-4-m4",
      "introductions-4-m5",
      "introductions-4-m6",
      "introductions-4-m7",
      "introductions-4-m8",
    ],
    "moduleId": "introductions",
    "order": 4,
    "practice": {
      "lessonId": "introductions-4",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-4-m1",
          "introductions-4-m2",
          "introductions-4-m3",
          "introductions-4-m4",
          "introductions-4-m5",
          "introductions-4-m6",
          "introductions-4-m7",
          "introductions-4-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-4-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-4-t1",
          "introductions-4-t2",
          "introductions-4-t3",
          "introductions-4-t4",
          "introductions-4-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-4-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
    },
    "primaryCanDoId": "a1-can-do-identity",
    "spokenVariantId": "introductions-4-m1",
    "supportingCanDoIds": [
      "a1-can-do-origins",
      "a1-can-do-actions",
    ],
  },
]
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact variant ids and families (in authored order) per lesson 1`] = `
[
  {
    "families": [
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
    ],
    "id": "introductions-1",
    "speakerRoles": [
      "a1-role-yuki",
      "a1-role-ken",
      "a1-role-learner",
      "a1-role-learner",
      "a1-role-teacher",
      "a1-role-learner",
      "a1-role-yuki",
      "a1-role-learner",
      "a1-role-ken",
      "a1-role-learner",
      "a1-role-yuki",
      "a1-role-yuki",
      "a1-role-learner",
    ],
    "structureKeys": [
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
    ],
    "subjectReferents": [
      "a1-referent-yuki",
      "a1-referent-ken",
      "a1-referent-self",
      "a1-referent-self",
      "a1-referent-teacher",
      "a1-referent-self",
      "a1-referent-yuki",
      "a1-referent-self",
      "a1-referent-ken",
      "a1-referent-self",
      "a1-referent-yuki",
      "a1-referent-yuki",
      "a1-referent-self",
    ],
    "variantIds": [
      "introductions-1-m1",
      "introductions-1-m2",
      "introductions-1-m3",
      "introductions-1-m4",
      "introductions-1-m5",
      "introductions-1-m6",
      "introductions-1-m7",
      "introductions-1-m8",
      "introductions-1-t1",
      "introductions-1-t2",
      "introductions-1-t3",
      "introductions-1-t4",
      "introductions-1-t5",
    ],
  },
  {
    "families": [
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
    ],
    "id": "introductions-2",
    "speakerRoles": [
      "a1-role-yuki",
      "a1-role-ken",
      "a1-role-learner",
      "a1-role-ken",
      "a1-role-learner",
      "a1-role-learner",
      "a1-role-yuki",
      "a1-role-ken",
      "a1-role-yuki",
      "a1-role-ken",
      "a1-role-yuki",
      "a1-role-learner",
      "a1-role-ken",
    ],
    "structureKeys": [
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
    ],
    "subjectReferents": [
      "a1-referent-yuki",
      "a1-referent-ken",
      "a1-referent-self",
      "a1-referent-ken",
      "a1-referent-self",
      "a1-referent-self",
      "a1-referent-yuki",
      "a1-referent-ken",
      "a1-referent-yuki",
      "a1-referent-ken",
      "a1-referent-yuki",
      "a1-referent-self",
      "a1-referent-ken",
    ],
    "variantIds": [
      "introductions-2-m1",
      "introductions-2-m2",
      "introductions-2-m3",
      "introductions-2-m4",
      "introductions-2-m5",
      "introductions-2-m6",
      "introductions-2-m7",
      "introductions-2-m8",
      "introductions-2-t1",
      "introductions-2-t2",
      "introductions-2-t3",
      "introductions-2-t4",
      "introductions-2-t5",
    ],
  },
  {
    "families": [
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-topic-copular",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-topic-copular",
      "a1-family-nominative-action",
    ],
    "id": "introductions-3",
    "speakerRoles": [
      "a1-role-yuki",
      "a1-role-ken",
      "a1-role-mina",
      "a1-role-learner",
      "a1-role-yuki",
      "a1-role-learner",
      "a1-role-ken",
      "a1-role-yuki",
      "a1-role-mina",
      "a1-role-mina",
      "a1-role-yuki",
      "a1-role-ken",
      "a1-role-learner",
    ],
    "structureKeys": [
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|omitted|affirmative:present:polite|object,predicate,subject",
    ],
    "subjectReferents": [
      "a1-referent-yuki",
      "a1-referent-ken",
      "a1-referent-mina",
      "a1-referent-self",
      "a1-referent-yuki",
      "a1-referent-self",
      "a1-referent-ken",
      "a1-referent-yuki",
      "a1-referent-mina",
      "a1-referent-mina",
      "a1-referent-yuki",
      "a1-referent-ken",
      "a1-referent-self",
    ],
    "variantIds": [
      "introductions-3-m1",
      "introductions-3-m2",
      "introductions-3-m3",
      "introductions-3-m4",
      "introductions-3-m5",
      "introductions-3-m6",
      "introductions-3-m7",
      "introductions-3-m8",
      "introductions-3-t1",
      "introductions-3-t2",
      "introductions-3-t3",
      "introductions-3-t4",
      "introductions-3-t5",
    ],
  },
  {
    "families": [
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
    ],
    "id": "introductions-4",
    "speakerRoles": [
      "a1-role-yuki",
      "a1-role-ken",
      "a1-role-yuki",
      "a1-role-learner",
      "a1-role-learner",
      "a1-role-learner",
      "a1-role-ken",
      "a1-role-learner",
      "a1-role-mina",
      "a1-role-yuki",
      "a1-role-ken",
      "a1-role-learner",
      "a1-role-learner",
    ],
    "structureKeys": [
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|omitted|affirmative:present:polite|object,predicate,subject",
    ],
    "subjectReferents": [
      "a1-referent-yuki",
      "a1-referent-ken",
      "a1-referent-yuki",
      "a1-referent-person",
      "a1-referent-person",
      "a1-referent-self",
      "a1-referent-ken",
      "a1-referent-self",
      "a1-referent-mina",
      "a1-referent-yuki",
      "a1-referent-ken",
      "a1-referent-self",
      "a1-referent-self",
    ],
    "variantIds": [
      "introductions-4-m1",
      "introductions-4-m2",
      "introductions-4-m3",
      "introductions-4-m4",
      "introductions-4-m5",
      "introductions-4-m6",
      "introductions-4-m7",
      "introductions-4-m8",
      "introductions-4-t1",
      "introductions-4-t2",
      "introductions-4-t3",
      "introductions-4-t4",
      "introductions-4-t5",
    ],
  },
]
`;
